--- a/image_processing_using_OpenCV.ipynb
+++ b/image_processing_using_OpenCV.ipynb
@@ -7,7 +7,8 @@
    "outputs": [],
    "source": [
     "import cv2\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -760,6 +761,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2D Convolution ( Image Filtering )"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 81,
    "metadata": {},
@@ -794,10 +803,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "img = cv2.imread('pic2.jpg')\n",
+    "\n",
+    "blur = cv2.blur(img, (3,3))\n",
+    "\n",
+    "stack = np.hstack((img, blur))\n",
+    "cv2.imshow(\"window\",stack)\n",
+    "cv2.waitKey(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# change shape of image \n",
+    "img = cv2.imread('pic1.jpg')\n",
+    "img_resize = cv2.resize(img, (600, 400))\n",
+    "cv2.imwrite(\"pic2.jpg\", img_resize)\n",
+    "cv2.imshow(\"windows\",img_resize)\n",
+    "cv2.waitKey(0)"
+   ]
   }
  ],
  "metadata": {
