--- a/image_processing_using_OpenCV.ipynb
+++ b/image_processing_using_OpenCV.ipynb
@@ -851,6 +851,53 @@
     "cv2.imshow(\"windows\",img_resize)\n",
     "cv2.waitKey(0)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Face detection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2\n",
+    "\n",
+    "# Creat a cascade classifier object\n",
+    "face_cascade = cv2.CascadeClassifier(cv2.data.haarcascades +\"haarcascade_frontalface_default.xml\")\n",
+    "\n",
+    "img = cv2.imread('margot_will.jpg')\n",
+    "\n",
+    "gray_img = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
+    "\n",
+    "faces = face_cascade.detectMultiScale(gray_img, scaleFactor=1.07, minNeighbors=5)\n",
+    "\n",
+    "for x, y, w,h in faces:\n",
+    "    img = cv2.rectangle(img, (x,y), (x+w, y+h), (0,255,0), 3)\n",
+    "\n",
+    "    resized = cv2.resize(img, (int(img.shape[1]/3), int(img.shape[0]/3)))\n",
+    "\n",
+    "    cv2.imshow(\"face\", resized)\n",
+    "\n",
+    "k = cv2.waitKey(0)\n",
+    "if k == 27:         # wait for ESC key to exit\n",
+    "    cv2.destroyAllWindows()\n",
+    "elif k == ord('s'): # wait for 's' key to save and exit\n",
+    "    cv2.imwrite('face_detect.png',img)\n",
+    "    cv2.destroyAllWindows()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
